force-app/main/default/objects/Collection_Deals__c/Collection_Deals__c.object-meta.xml
<CustomObject>
    <label>Collection Deals</label>
    <nameField>
        <displayFormat>CD - {000}</displayFormat>
        <label>Collection Deals ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>