force-app/main/default/objects/Collection_Deals__c/fields/Deal_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Closing_Date__c</fullName>
    <defaultValue>(Today() + 3)</defaultValue>
    <label>Deal Closing Date</label>
    <type>Date</type>
</CustomField>