force-app/main/default/objects/Collection_Deals__c/fields/Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage__c</fullName>
    <label>Deal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Call not Connected</fullName>
            </value>
            <value>
                <fullName>Contact Details Not Available</fullName>
            </value>
            <value>
                <fullName>Visit Done</fullName>
            </value>
            <value>
                <fullName>Already Paid</fullName>
            </value>
            <value>
                <fullName>ACR Customer</fullName>
            </value>
            <value>
                <fullName>Paid in Cash but not updated</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Operational issue</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Reconciliation Under Process</fullName>
            </value>
            <value>
                <fullName>Revert Awaited</fullName>
            </value>
            <value>
                <fullName>Payment in Process</fullName>
            </value>
            <value>
                <fullName>TDS Pending</fullName>
            </value>
            <value>
                <fullName>Fund Issue</fullName>
            </value>
            <value>
                <fullName>No ledger available wth Customer</fullName>
            </value>
            <value>
                <fullName>To Pay issue</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Complete Payment Received</fullName>
            </value>
            <value>
                <fullName>Part Payment Received</fullName>
            </value>
            <value>
                <fullName>Approval Under process</fullName>
            </value>
            <value>
                <fullName>Credit Note Under process</fullName>
            </value>
            <value>
                <fullName>Write off pending</fullName>
            </value>
            <value>
                <fullName>Write off done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>