force-app/main/default/objects/Collection_Deals__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deal_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Number</fullName>
            </value>
            <value>
                <fullName>Number Not Reachable</fullName>
            </value>
            <value>
                <fullName>Number Switched Off</fullName>
            </value>
            <value>
                <fullName>Not Responding</fullName>
            </value>
            <value>
                <fullName>Need To take Contact Details From Branch</fullName>
            </value>
            <value>
                <fullName>Need To Visit on GST address</fullName>
            </value>
            <value>
                <fullName>Office Closed - Revisit Required</fullName>
            </value>
            <value>
                <fullName>Address Shifted - No Contact Available</fullName>
            </value>
            <value>
                <fullName>Customers Skipped from the address</fullName>
            </value>
            <value>
                <fullName>AR correction</fullName>
            </value>
            <value>
                <fullName>Payment Entry Done from Suspense</fullName>
            </value>
            <value>
                <fullName>O/s Pending Before ACR</fullName>
            </value>
            <value>
                <fullName>Excess Billing o/s</fullName>
            </value>
            <value>
                <fullName>No Receipt  - Payment Denial from customer</fullName>
            </value>
            <value>
                <fullName>Shared Receipt by customer - CN Issued</fullName>
            </value>
            <value>
                <fullName>Shared Receipt by customer - Payment updated</fullName>
            </value>
            <value>
                <fullName>POD Required</fullName>
            </value>
            <value>
                <fullName>Wrong Billing Account Selected</fullName>
            </value>
            <value>
                <fullName>Wrong Shipment Value Captured</fullName>
            </value>
            <value>
                <fullName>Wrong Weight Captured</fullName>
            </value>
            <value>
                <fullName>Billing issue</fullName>
            </value>
            <value>
                <fullName>Export Invoice Issue ( Duty, Freight, etc…)</fullName>
            </value>
            <value>
                <fullName>Offline Charges Issue</fullName>
            </value>
            <value>
                <fullName>Ledger Reconciliation Under Process</fullName>
            </value>
            <value>
                <fullName>Shipment Lost or Damaged</fullName>
            </value>
            <value>
                <fullName>To Pay Issue</fullName>
            </value>
            <value>
                <fullName>Required Certificate from customer</fullName>
            </value>
            <value>
                <fullName>Payment Denial</fullName>
            </value>
            <value>
                <fullName>Ready to settle</fullName>
            </value>
            <value>
                <fullName>Ready to talk to other party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>