force-app/main/default/objects/Collection_Deals__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Pending Internal</fullName>
            </value>
            <value>
                <fullName>Pending Customer</fullName>
            </value>
            <value>
                <fullName>Stalemate</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>Write-off Pending</fullName>
            </value>
            <value>
                <fullName>Write-off Done</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
                <isActive>false</isActive>
                <label>In Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>