force-app/main/default/objects/Collection_Deals__c/fields/Update1__c.field-meta.xml
<CustomField>
    <fullName>Update1__c</fullName>
    <label>Update</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>