force-app/main/default/objects/Collection_Deals__c/validationRules/Deal_Amount_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Deal_Amount_Mandatory</fullName>
    <active>true</active>
    <description>Deal_Amount_Mandatory</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Stage__c , &apos;Payment Received&apos;) ,
 ISBLANK(  Deal__c ) 
)</errorConditionFormula>
    <errorDisplayField>Deal__c</errorDisplayField>
    <errorMessage>Please enter Deal Amount</errorMessage>
</ValidationRule>