force-app/main/default/objects/Collection_Deals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Deal_Stage__c</columns>
    <columns>Stage__c</columns>
    <columns>Remark__c</columns>
    <columns>Deal_Closing_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Update1__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deal_Stage__c</field>
        <operation>equals</operation>
        <value>Credit Note</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>All</label>
</ListView>